--- a/package.json
+++ b/package.json
@@ -1,43 +1,21 @@
 {
-  "name": "@charliewilco/observatory",
-  "license": "Unlicense",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
-  "typings": "dist/index.d.ts",
-  "files": [
-    "dist/**/*"
-  ],
-  "scripts": {
-    "prepublish": "yarn build",
-    "prebuild": "rm -rf dist",
-    "build": "rollup -c",
-    "test": "jest",
-    "example": "vite example --config example/vite.config.js",
-    "vercel-build": "vite build example --outDir ../public --config example/vite.config.js"
-  },
-  "dependencies": {
-    "@charliewilco/iterable-lists": "^0.1.3"
-  },
-  "devDependencies": {
-    "esbuild": "^0.12.15",
-    "jest": "^27.0.6",
-    "prettier": "^2.3.2",
-    "rollup": "^2.53.2",
-    "rollup-plugin-dts": "^3.0.2",
-    "rollup-plugin-esbuild": "^4.5.0",
-    "ts-jest": "^27.0.3",
-    "typescript": "^4.3.5",
-    "vite": "^2.4.2"
-  },
-  "prettier": {
-    "printWidth": 95,
-    "singleQuote": false,
-    "semi": true,
-    "bracketSpacing": true,
-    "jsxBracketSameLine": true
-  },
-  "jest": {
-    "preset": "ts-jest"
-  },
-  "version": "0.1.1"
+    "private": true,
+    "workspaces": [
+        "observatory",
+        "example",
+        "docs"
+    ],
+    "prettier": {
+        "printWidth": 95,
+        "singleQuote": false,
+        "semi": true,
+        "bracketSpacing": true,
+        "jsxBracketSameLine": true
+    },
+    "devDependencies": {
+        "prettier": "^2.3.2"
+    },
+    "scripts": {
+        "build": "yarn workspaces run build"
+    }
 }
