--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ jobs:
           registry-url: "https://registry.npmjs.org"
       - run: yarn
       # Publish to npm
-      - run: yarn publish --access public
+      - run: yarn publish observatory --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       # Setup .npmrc file to publish to GitHub Packages
@@ -25,6 +25,6 @@ jobs:
         with:
           registry-url: "https://npm.pkg.github.com"
       # Publish to GitHub Packages
-      - run: yarn publish
+      - run: yarn publish observatory
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
