--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "prettier": "^2.3.2"
     },
     "scripts": {
-        "build": "yarn workspaces run build"
+        "build": "yarn workspaces run build",
+        "test" : "yarn workspace @charliewilco/observatory run test"
     }
 }
