--- a/example/package.json
+++ b/example/package.json
@@ -7,7 +7,7 @@
     "serve": "vite preview"
   },
   "devDependencies": {
-    "@charliewilco/observatory": "latest",
+    "@charliewilco/observatory": "0.1.2",
     "typescript": "^4.3.2",
     "vite": "^2.4.2"
   }
