--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-    "private": true,
-    "workspaces": [
-        "observatory",
-        "example",
-        "docs"
-    ],
-    "scripts": {
-        "build": "yarn workspaces run build",
-        "test": "yarn workspace @charliewilco/observatory run test",
-        "nudge": "yarn workspace @charliewilco/observatory version"
-    },
-    "devDependencies": {
-        "prettier": "^2.3.2"
-    },
-    "prettier": {
-        "printWidth": 95,
-        "singleQuote": false,
-        "semi": true,
-        "bracketSpacing": true,
-        "jsxBracketSameLine": true
-    }
+  "private": true,
+  "workspaces": [
+    "observatory",
+    "example",
+    "docs"
+  ],
+  "scripts": {
+    "build": "yarn workspaces run build",
+    "test": "yarn workspace @charliewilco/observatory run test --silent --verbose",
+    "nudge": "yarn workspace @charliewilco/observatory version"
+  },
+  "devDependencies": {
+    "jest": "^27.0.6",
+    "prettier": "^2.3.2",
+    "ts-jest": "^27.0.3",
+    "typescript": "^4.3.5"
+  },
+  "prettier": {
+    "printWidth": 95,
+    "singleQuote": false,
+    "semi": true,
+    "bracketSpacing": true,
+    "jsxBracketSameLine": true
+  },
+  "jest": {
+    "preset": "ts-jest"
+  }
 }
