--- a/package.json
+++ b/package.json
@@ -1,23 +1,39 @@
 {
-    "private": true,
-    "workspaces": [
-        "observatory",
-        "example",
-        "docs"
-    ],
-    "scripts": {
-        "build": "yarn workspaces run build",
-        "test": "yarn workspace @charliewilco/observatory run test",
-        "nudge": "yarn workspace @charliewilco/observatory version"
-    },
-    "devDependencies": {
-        "prettier": "^2.3.2"
-    },
-    "prettier": {
-        "printWidth": 95,
-        "singleQuote": false,
-        "semi": true,
-        "bracketSpacing": true,
-        "jsxBracketSameLine": true
-    }
+  "name": "@charliewilco/observatory",
+  "license": "Unlicense",
+  "version": "0.1.2",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "typings": "dist/index.d.ts",
+  "files": ["dist/**/*"],
+  "scripts": {
+    "prepublish": "yarn build",
+    "prebuild": "rm -rf dist",
+    "build": "rollup -c",
+    "test": "jest",
+    "dev": "rollup -c --watch"
+  },
+  "dependencies": {
+    "@charliewilco/iterable-lists": "^0.1.3"
+  },
+  "devDependencies": {
+    "esbuild": "^0.12.15",
+    "jest": "^27.0.6",
+    "prettier": "^2.3.2",
+    "rollup": "^2.53.2",
+    "rollup-plugin-dts": "^3.0.2",
+    "rollup-plugin-esbuild": "^4.5.0",
+    "ts-jest": "^27.0.3",
+    "typescript": "^4.3.5"
+  },
+  "jest": {
+    "preset": "ts-jest"
+  },
+  "prettier": {
+    "printWidth": 95,
+    "singleQuote": false,
+    "semi": true,
+    "bracketSpacing": true,
+    "jsxBracketSameLine": true
+  }
 }
