--- a/package.json
+++ b/package.json
@@ -5,23 +5,26 @@
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "typings": "dist/index.d.ts",
-  "files": ["dist/**/*"],
+  "files": [
+    "dist/**/*"
+  ],
   "scripts": {
     "prepublish": "yarn build",
     "prebuild": "rm -rf dist",
     "build": "rollup -c",
-    "test": "jest",
-    "dev": "rollup -c --watch"
+    "test": "jest --verbose --runInBand",
+    "test:ci": "yarn test --ci --no-cache",
+    "dev": "yarn build --watch"
   },
   "dependencies": {
     "@charliewilco/iterable-lists": "^0.1.3"
   },
   "devDependencies": {
-    "esbuild": "^0.12.15",
+    "esbuild": "^0.13.15",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "rollup": "^2.53.2",
-    "rollup-plugin-dts": "^3.0.2",
+    "rollup-plugin-dts": "^4.0.1",
     "rollup-plugin-esbuild": "^4.5.0",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.5"
